# vampire_survivors

./: .gitignore  CMakeLists.txt  README.md
Assets/Sprites/Atirador/: Atirador.json
Assets/Sprites/Boss/: Boss.json
Assets/Sprites/Comum/: Comum.json
Assets/Sprites/Corredor/: Corredor.json
Assets/Sprites/Gordo/: Gordo.json
Assets/Sprites/Player/: Player.json
Assets/Sprites/Xp/: xp.json
Shaders/: Base.frag  Base.vert
Source/: Game.cpp  Game.h
Source/Actors/: Actor.cpp  Actor.h  Asteroid.cpp  Asteroid.h  Background.cpp  Background.h  Boss.cpp  Boss.h  DelayedExplosion.cpp  DelayedExplosion.h  Enemy.cpp  Enemy.h  ExperienceOrb.cpp  ExperienceOrb.h  FloatingText.cpp  FloatingText.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h
Source/Audio/: AudioSystem.cpp  AudioSystem.h
Source/Components/: AnimatorComponent.cpp  AnimatorComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h  Component.cpp  Component.h  DrawComponent.cpp  DrawComponent.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Menus/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  PauseMenu.cpp  PauseMenu.h  UpgradeMenu.cpp  UpgradeMenu.h
Source/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp
